force-app/main/default/objects/Pricebook2/fields/COMM_ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>COMM_ValidFrom__c</fullName>
    <defaultValue>DATETIMEVALUE(TEXT(TODAY()) + &quot; 00:00:00&quot;)</defaultValue>
    <description>Beginning date and hour for which the price is valid</description>
    <label>Valid From</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>