force-app/main/default/objects/Pricebook2/fields/COMM_ValidTo__c.field-meta.xml
<CustomField>
    <fullName>COMM_ValidTo__c</fullName>
    <description>End date and hour for which the price is valid date for which the product is deemed valid</description>
    <label>Valid To</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>