force-app/main/default/objects/Pricebook2/validationRules/COMM_VerfiyRangeDates.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerfiyRangeDates</fullName>
    <active>true</active>
    <description>Check if Valid To is set after Valid From</description>
    <errorConditionFormula>COMM_ValidTo__c &lt; COMM_ValidFrom__c</errorConditionFormula>
    <errorMessage>Valid To cannot be set before Valid From</errorMessage>
</ValidationRule>