force-app/main/default/objects/Pricebook2/validationRules/COMM_VerfiyStandardDates.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerfiyStandardDates</fullName>
    <active>true</active>
    <description>Check if Valid From and Valid To are set as the first and last day of the same Year respectably</description>
    <errorConditionFormula>AND(
    IsStandard,
    NOT(
        AND(
            DAY(DATEVALUE(COMM_ValidFrom__c)) = 1,
            MONTH(DATEVALUE(COMM_ValidFrom__c)) = 1,
            HOUR(( TIMEVALUE(COMM_ValidFrom__c) )) = 0,
            MINUTE(( TIMEVALUE(COMM_ValidFrom__c) )) = 0,
            DAY(DATEVALUE(COMM_ValidTo__c)) = 31,
            MONTH(DATEVALUE(COMM_ValidTo__c)) = 12,
            HOUR(( TIMEVALUE(COMM_ValidTo__c) )) = 23,
            MINUTE(( TIMEVALUE(COMM_ValidTo__c) )) = 59,
            YEAR(DATEVALUE(COMM_ValidFrom__c)) = YEAR(DATEVALUE(COMM_ValidTo__c))
        )
    )
)</errorConditionFormula>
    <errorMessage>For Standard Price books Valid From and Valid To should be the first and last day of the same Year respectably</errorMessage>
</ValidationRule>