force-app/main/default/objects/Pricebook2/validationRules/COMM_VerifyPastDates.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyPastDates</fullName>
    <active>false</active>
    <description>Check if Price Book date is set to a past time at creation and update</description>
    <errorConditionFormula>OR(
   AND(
      ISNEW(),
      OR(COMM_ValidFrom__c &lt; NOW(),
         COMM_ValidTo__c &lt; NOW())),
   AND(
      NOT(ISNEW()),
      ISCHANGED(COMM_ValidTo__c),
      COMM_ValidTo__c &lt; NOW())
)</errorConditionFormula>
    <errorMessage>Price books cannot be set in the past</errorMessage>
</ValidationRule>